Подретушировал пост про 4 типа реакции на гнев

--- a/_posts/2023-05-17-gnev-4-tipa.md
+++ b/_posts/2023-05-17-gnev-4-tipa.md
@@ -9,61 +9,61 @@ published: true
 3. С пониманием отнестись к другому
 4. С пониманием отнестись к себе
 
-**Обвинить другого** - не помогает выстраиванию близких отношений,  
-	и не способствует эмоциональному контакту  
+**Обвинить другого** - не помогает выстраиванию близких отношений,\
+	и не способствует эмоциональному контакту
 
 **Обвинить себя** - тоже не помогает,  
- * во-первых у нас остается чувство вины. И если мы что-то предпримем в таком состоянии,  
-		то это может исходить из вины, а не из нашего искреннего желания  
- * во-вторых в ответ на то что я себя обвиняю,  
+ * во-первых у нас остается чувство вины. И если мы что-то предпримем в таком состоянии,\
+		то это может исходить из вины, а не из нашего искреннего желания
+ * во-вторых в ответ на то что я себя обвиняю,\
 		может возникнуть гнев уже как защитная реакция на обвинения  
 
-**С пониманием отнестись к другому** - поможет установить взаимопонимание,
+**С пониманием отнестись к другому** - поможет установить взаимопонимание,\
 	если у меня самого хватает спокойствия, чтобы не скатиться в первые два.
 
-**С пониманием отнестись к себе** - если я сам не чувствую себя понятым, то как могу понять другого.  
-	Проявить понимание к себе - это как первая помощь, если не оказать её сначала себе,
-	вряд ли я смогу помочь оказать её кому-то другому.
+**С пониманием отнестись к себе** - если я сам не чувствую себя понятым, то как могу понять другого.\
+   Проявить понимание к себе - это как первая помощь, если не оказать её сначала себе,\
+   вряд ли я смогу помочь оказать её кому-то другому.
 
 При этом реакциями могут быть и слова, и действия.
 
-Сложность в том, что  
-не всегда возможно выбирать как отреагировать.  
-Стоит быть осторожным с попыткой всегда действовать определенным способом.  
-Есть вероятность, что если я хочу во всех ситуациях проявлять пониманием,  
-но не смогу это сделать - то начну обвинять себя, и это уже обвинение.  
+Сложность в том, что\
+не всегда возможно выбирать как отреагировать.\
+Стоит быть осторожным с попыткой всегда действовать определенным способом.\
+Есть вероятность, что если я хочу во всех ситуациях проявлять пониманием,\
+но не смогу это сделать - то начну обвинять себя, и это уже обвинение.
 
 **Что помогает мне менять свои привычные реакции**:
 
-1) **Обращать внимание**
-Замечать какой из 4-х типов реакций я реализую.  
-Просто замечать, когда я злюсь, как я реагирую.  
-Если не заметил в моменте, или забыл обратить внимание,  
+1) **Обращать внимание**\
+Замечать какой из 4-х типов реакций я реализую.\
+Просто замечать, когда я злюсь, как я реагирую.\
+Если не заметил в моменте, или забыл обратить внимание,\
 можно попытаться разобраться сразу как вспомню.
 
-То есть в моменте, когда злюсь,  
-отмечать свои поступки, слова и мысли,  
-и к какому из 4-х типов реакции на гнев они относятся:  
-обвинить другого, Обвинить себя, эмпатию к другому, эмпатия к себе.  
-Быть осторожным с тем чтобы не начать требовать от себя конкретной реакции, просто замечать.  
-Смысл тут не в том чтобы начать контролировать свои реакции,  
+То есть в моменте, когда злюсь,\
+отмечать свои поступки, слова и мысли,\
+и к какому из 4-х типов реакции на гнев они относятся:\
+обвинить другого, Обвинить себя, эмпатию к другому, эмпатия к себе.\
+Быть осторожным с тем чтобы не начать требовать от себя конкретной реакции, просто замечать.\
+Смысл тут не в том чтобы начать контролировать свои реакции,\
 а в том, чтобы начать их ясно видеть.
 
-Иногда лучшим способом реакции на собственный гнев, будет отложить разговор, если я понимаю,  
+Иногда лучшим способом реакции на собственный гнев, будет отложить разговор, если я понимаю,\
 что вряд ли могу отреагировать без обвинений.
 
-2) **Рассмотреть разные реакции**
-Если есть ситуация, где были гнев и злость.  
-Выписать ситуацию, и прописать:  
-Как бы я действовал в данной ситуации если бы:  
-	1) Обвинял другого  
-	2) Обвинял себя  
-	3) С пониманием и эмпатией отнесся к другому  
-	4) С пониманием и эмпатией отнесся к себе  
+2) **Рассмотреть разные реакции**\
+Если есть ситуация, где были гнев и злость.\
+Выписать ситуацию, и прописать:\
+Как бы я действовал в данной ситуации если бы:\
+	1) Обвинял другого\
+	2) Обвинял себя\
+	3) С пониманием и эмпатией отнесся к другому\
+	4) С пониманием и эмпатией отнесся к себе
 
-Поначалу может быть сложно, с практикой будет сильно проще.  
-Так тренируются сразу 2 вещи:  
-	1) Учусь видеть возможности действовать иначе в ситуациях где я злюсь.  
-	2) Учусь проявлять эмпатию и понимание в ситуациях,  
-где мне даже сложно было представить, что я могу отнестись к другим и себе с пониманием.  
+Поначалу может быть сложно, с практикой будет сильно проще.\
+Так тренируются сразу 2 вещи:\
+	1) Учусь видеть возможности действовать иначе в ситуациях где я злюсь.\
+	2) Учусь проявлять эмпатию и понимание в ситуациях,\
+где мне даже сложно было представить, что я могу отнестись к другим и себе с пониманием.\
 А тут у меня есть время подумать, представить, в безопасной спокойной обстановке.
