изменил в конфиге чтобы был месяц в пути к посту в блоге, добавил пермалинки ко всем написанным постам, чтобы они оставались по старым ссылкам, добавил явное указание дат во всех постах. В будущем хочу сделать отображение постов по конкретному месяцу, и возможно, году

--- a/_posts/2023-05-17-gnev-4-tipa.md
+++ b/_posts/2023-05-17-gnev-4-tipa.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: "4 типа реакций на гнев"
+date: 2023-05-21
+permalink: "/blog/2023/gnev-4-tipa/"
 published: true
 ---
 Все реакции на гнев можно условно разделить на 4 группы:
