--- a/_posts/2023-08-11-i-wish.md
+++ b/_posts/2023-08-11-i-wish.md
@@ -33,10 +33,13 @@ published: true
 В гробу нет карманов - деньги с собой не заберешь.\
 Деньги могут пропасть или обесцениться.\
 Но удовольствие от жизни не может потеряться.\
-И это привычка, делать то что по-настоящему хочется - привычка, задаваться вопросом "чего мне хочется?" - тоже привычка.\
-Беспокоиться - это привычка. Микроскопически выборы, которые совершаются каждый день.\
-Привычка, распространившаяся на всё общество - это культура. Культура впитывается с молоком матери в виде неосознанных реакций.
+И это привычка,\
+**делать то, что по-настоящему хочется - привычка,\
+задаваться вопросом "чего мне хочется?" - тоже привычка.**\
+Беспокоиться - это привычка. Микроскопические выборы, решения, которые совершаются каждый день.
 
+Привычка, распространившаяся на всё общество - это культура.\
+Культура впитывается с молоком матери в виде неосознанных реакций.\
 Но это не значит, что культура определяет, как нам жить или реагировать.\
 Если я решаю сам определять и выбирать свои реакции - то привычки можно заменять.\
 Например, вместо привычного раздражения - я могу решить задуматься, чего я действительно хочу.\
