Еще поправил пост

--- a/_posts/2023-08-11-i-wish.md
+++ b/_posts/2023-08-11-i-wish.md
@@ -42,6 +42,7 @@ published: true
 Культура впитывается с молоком матери в виде неосознанных реакций.\
 Но это не значит, что культура определяет, как нам жить или реагировать.\
 Если я решаю сам определять и выбирать свои реакции - то привычки можно заменять.\
-Например, вместо привычного раздражения - я могу решить задуматься, чего я действительно хочу.\
-И что для меня вообще было бы важно, чем бы я хотел заниматься, что хотел бы делать если бы мне осталось жить полгода, или 3 месяца или 10 минут?\
+Например, вместо привычного раздражения - я могу решить задуматься, чего я действительно хочу.
+
+Что для меня вообще было бы важно, чем бы я хотел заниматься, что хотел бы делать, если бы мне осталось жить полгода, или 3 месяца или 10 минут?\
 Что тогда бы имело смысл, вызывало бы во мне раздражение то, что вызывает сейчас, и к чему бы я тогда стремился?
